force-app/main/default/objects/Community_Settings__c/Community_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store all settings related to NPN</description>
    <label>Community Settings</label>
</CustomObject>