force-app/main/default/objects/Community_Settings__c/fields/ACC_COMPUTING_TESLA__c.field-meta.xml
<CustomField>
    <fullName>ACC_COMPUTING_TESLA__c</fullName>
    <label>ACC COMPUTING TESLA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>