force-app/main/default/objects/Community_Settings__c/fields/BATCHJOB_PS_PG_ASSIGN_LKBK_TIME__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_PS_PG_ASSIGN_LKBK_TIME__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Batch Job: Lookback time used in LastModifiedDate &gt; Now - LookbackTime</description>
    <inlineHelpText>Batch Job: Lookback time used in LastModifiedDate &gt; Now - LookbackTime</inlineHelpText>
    <label>BATCHJOB_PS_PG_ASSIGN_LKBK_TIME</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>