force-app/main/default/objects/Community_Settings__c/fields/BATCHJOB_PS_PG_ASSIGN_RECUR__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_PS_PG_ASSIGN_RECUR__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Batch Job: Recurring time - the next time the job will run (Now + Recurring Time) in minutes</description>
    <inlineHelpText>Batch Job: Recurring time - the next time the job will run (Now + Recurring Time) in minutes</inlineHelpText>
    <label>BATCHJOB_PS_PG_ASSIGN_RECUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>