force-app/main/default/objects/Community_Settings__c/fields/BATCHJOB_PS_PG_BATCH_SIZE__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_PS_PG_BATCH_SIZE__c</fullName>
    <defaultValue>25</defaultValue>
    <description>BATCH JOB: Number of records per batch to be processed in batch job</description>
    <inlineHelpText>BATCH JOB: Number of records per batch to be processed in batch job</inlineHelpText>
    <label>BATCHJOB_PS_PG_BATCH_SIZE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>