force-app/main/default/objects/Community_Settings__c/fields/BATCHJOB_PS_PG_ESCAPE_USER_SETTINGS_PROF__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_PS_PG_ESCAPE_USER_SETTINGS_PROF__c</fullName>
    <description>COMM_AssignPSPG_To_CommunityUsers_Batch : Profiles that need to be skipped for user settings such as Salesforce1 User = False, 
Salesforce CRM Content User = True (Only for Partner Portal Users), 
Chatter Answers User = false, 
Receive Salesforce CRM Content Email Alerts = false, 
Receive Salesforce CRM Content Alerts as Daily Digest = false 
Note: Semi-colon separated e.g, Marketing Customer Community; this; that</description>
    <inlineHelpText>Semi-colon separated e.g, Marketing Customer Community; Prof2; Prof3</inlineHelpText>
    <label>BATCHJOB_PS_PG_ESCAPE_USER_SETTINGS_PROF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>