force-app/main/default/objects/Community_Settings__c/fields/BATCHJOB_U2CSync_BATCH_SIZE__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_U2CSync_BATCH_SIZE__c</fullName>
    <defaultValue>25</defaultValue>
    <description>COMM_Sync_CommUserDataToContactRec_Batch Job : Number of records per batch to be processed in batch job</description>
    <inlineHelpText>COMM_Sync_CommUserDataToContactRec_Batch Job : Number of records per batch to be processed in batch job</inlineHelpText>
    <label>BATCHJOB_U2CSync_BATCH_SIZE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>