force-app/main/default/objects/Community_Settings__c/fields/BATCHJOB_U2CSync_ENABLE_SCHDULED_JOB__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_U2CSync_ENABLE_SCHDULED_JOB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>COMM_AssignPSPG_To_CommunityUsers_Batch:
If set to false, the batch job will terminated, but you need to run it manually to start again.
COMM_AssignPSPG_To_CommunityUsers_Batch p = new COMM_AssignPSPG_To_CommunityUsers_Batch();
DateTime currDT = DateTime.now().addMinutes(2);
integer sec = currDT.second();
integer min = currDT.minute();
String sch = sec + &apos; &apos; + min + &apos; &apos; + &apos;* ? * *&apos;; //0 5 * * * ?
system.debug(&apos;sch: &apos; + sch);
system.schedule(&apos;Exec of COMM_AssignPSPG_To_CommunityUsers_Batch&apos;, sch, p);</description>
    <inlineHelpText>COMM_AssignPSPG_To_CommunityUsers_Batch: If set to false, the batch job will terminated, but you need to run it manually to start again. See the fields description how to start the batch job that assigns the PS PG in batch mode.</inlineHelpText>
    <label>BATCHJOB_U2CSync_ENABLE_SCHDULED_JOB</label>
    <type>Checkbox</type>
</CustomField>