force-app/main/default/objects/Community_Settings__c/fields/BATCHJOB_U2CSync_LKBK_TIME__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_U2CSync_LKBK_TIME__c</fullName>
    <defaultValue>60</defaultValue>
    <description>COMM_Sync_CommUserDataToContactRec_Batch Job. Lookback time to gather User Records to process</description>
    <inlineHelpText>COMM_Sync_CommUserDataToContactRec_Batch Job : Lookback time to gather User Records to processLookback time to gather User Records to process (e.g., If you want to process user records that got updated in last 5 mintues, set the value to 5</inlineHelpText>
    <label>BATCHJOB_U2CSync_LKBK_TIME</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>