force-app/main/default/objects/Community_Settings__c/fields/BATCHJOB_U2CSync_RECUR__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_U2CSync_RECUR__c</fullName>
    <defaultValue>60</defaultValue>
    <description>COMM_Sync_CommUserDataToContactRec_Batch Job - Recurring time - the next time the job will run (Now + Recurring Time) in minutes</description>
    <inlineHelpText>COMM_Sync_CommUserDataToContactRec_Batch Job - Recurring time - the next time the job will run (Now + Recurring Time) in minutes</inlineHelpText>
    <label>BATCHJOB_U2CSync_RECUR</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>