force-app/main/default/objects/Community_Settings__c/fields/BRAINSHARK_URL__c.field-meta.xml
<CustomField>
    <fullName>BRAINSHARK_URL__c</fullName>
    <defaultValue>&quot;https://www.brainshark.com/portal/psapis/api/psSession.aspx&quot;</defaultValue>
    <label>BRAINSHARK_URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>