force-app/main/default/objects/Community_Settings__c/fields/CLOUD_VIRTUALIZATION_VGX__c.field-meta.xml
<CustomField>
    <fullName>CLOUD_VIRTUALIZATION_VGX__c</fullName>
    <label>CLOUD VIRTUALIZATION VGX</label>
    <length>100</length>
    <type>Text</type>
</CustomField>