force-app/main/default/objects/Community_Settings__c/fields/CONTENTVERSION_COMPETENCY_METAID__c.field-meta.xml
<CustomField>
    <fullName>CONTENTVERSION_COMPETENCY_METAID__c</fullName>
    <description>Portal Lite Content Filtering based on Competency and Region field (SPS-46, SIR-PJ25604)</description>
    <label>CONTENTVERSION COMPETENCY METAID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>