force-app/main/default/objects/Community_Settings__c/fields/CONTENTVERSION_LANGUAGE_REGION_METAID__c.field-meta.xml
<CustomField>
    <fullName>CONTENTVERSION_LANGUAGE_REGION_METAID__c</fullName>
    <defaultValue>&quot;00N40000002WvBR&quot;</defaultValue>
    <description>Field Id for CONTENTVERSION.LANGUAGE_REGION custom field</description>
    <label>CONTENTVERSION_LANGUAGE_REGION_METAID</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>