force-app/main/default/objects/Community_Settings__c/fields/ERROR_EMAILS__c.field-meta.xml
<CustomField>
    <fullName>ERROR_EMAILS__c</fullName>
    <description>Email addresses for notifying bulk sOEM user creation errors</description>
    <label>ERROR_EMAILS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>