force-app/main/default/objects/Community_Settings__c/fields/PROF_VISUALIZATION_VCA__c.field-meta.xml
<CustomField>
    <fullName>PROF_VISUALIZATION_VCA__c</fullName>
    <label>PROF VISUALIZATION VCA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>