force-app/main/default/objects/Community_Settings__c/fields/PS_PG_ASSIGN_RECUR__c.field-meta.xml
<CustomField>
    <fullName>PS_PG_ASSIGN_RECUR__c</fullName>
    <defaultValue>2</defaultValue>
    <label>PS_PG_ASSIGN_RECUR</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>