force-app/main/default/objects/Community_Settings__c/fields/PS_PG_ENABLE_SCHDULED_JOB__c.field-meta.xml
<CustomField>
    <fullName>PS_PG_ENABLE_SCHDULED_JOB__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PS_PG_ENABLE_SCHDULED_JOB</label>
    <type>Checkbox</type>
</CustomField>