force-app/main/default/objects/Community_Settings__c/fields/USERNAME_EXTENSION__c.field-meta.xml
<CustomField>
    <fullName>USERNAME_EXTENSION__c</fullName>
    <description>default username extension for bulk sOEM community users</description>
    <inlineHelpText>default username extension for bulk sOEM community users</inlineHelpText>
    <label>USERNAME_EXTENSION</label>
    <length>10</length>
    <type>Text</type>
</CustomField>